# norby

./: Eval.hs  IRC.hs  L.hs  LICENSE  Main.hs  Parser.hs  README.md  Seen.hs  Settings.hs  TODO  Types.hs  norby.cabal
src/: Bot.hs  Commands.hs  Eval.hs  IRC.hs  L.hs  Main.hs  Messages.hs  Parser.hs  Seen.hs  Settings.hs  TestSettings.hs  Types.hs  Utils.hs
