name:                 norby
version:              0.1
synopsis:             [°_°]
description:          BEEP BEEP BEEP
license:              BSD3
license-file:         LICENSE
author:               Jonas Westerlund
maintainer:           jonas.westerlund@gmail.com
-- Copyright:            
category:             Network
build-type:           Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:   

cabal-version:        >=1.2

executable norby
  hs-source-dirs: src
  -- .hs or .lhs file containing the Main module.
  main-is:            Main.hs
  
  -- Packages needed in order to build this package.
  build-depends:      base      >= 4     && <  5
  build-depends:      bson      >= 0.1   && <  1.0
  build-depends:      hint      >= 0.3   && <  1.0
  build-depends:      monads-fd >= 0.1   && <  1.0
  build-depends:      mongoDB   >= 0.8   && <  1.0
  -- build-depends:      mueval    >= 0.8   && <= 1.0
  build-depends:      network   >= 2.3   && <  3.0
  build-depends:      parsec    >= 3.0   && <  4.0
  build-depends:      process   >= 1.0   && <  2.0
  build-depends:      time      >= 1.1.4 && <= 1.2
  
  build-depends:      forkable-monad     >= 0.1.1 && < 1.0
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
  ghc-options:        -Wall -threaded
